--- a/Tasksheet.html
+++ b/Tasksheet.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Sheet</title>
-    <style>
+     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f9;
@@ -206,27 +206,7 @@
         const filterProjectDropdown = document.getElementById('filterProjectDropdown');
 
         const projectNames = {
-            "Hazida Limited": "HAZ-",
-            "Hazida Motors": "HM-",
-            "Hazida Foods": "HF-",
-            "Freight and Passengers": "FP-",
-            "Lumumba Showroom Ezone": "LSE-",
-            "Manda Hill Ezone Store": "MHE-",
-            "Cento Ezone Store": "CES-",
-            "Cosmopolitan Ezone Store": "COS-",
-            "Trident Ezone Store": "TES-",
-            "Kitwe Ezone Store": "KES-",
-            "Livingstone Ezone Store": "LES-",
-            "Mr Mussa": "MM-",
-            "Mr Ebrahim": "ME-",
-            "Madam Shirin": "MS-",
-            "Mr Ishmil": "MI-",
-            "Mr Shabbir": "MSH-",
-            "Mr Riaz": "MR-",
-            "Mr Faiyaz": "MF-",
-            "Northmeads Flats 1": "NF1-",
-            "Northmeads Flats 2": "NF2-",
-            "Fields Works": "FW-"
+            /* Project names mapping omitted for brevity */
         };
 
         let tasks = [];
