--- a/Chris.html
+++ b/Chris.html
@@ -36,7 +36,8 @@
             margin-top: 20px;
         }
 
-        th, td {
+        th,
+        td {
             text-align: left;
             padding: 12px;
             border-bottom: 1px solid #ddd;
@@ -72,7 +73,8 @@
             display: block;
         }
 
-        input, select {
+        input,
+        select {
             width: 100%;
             padding: 10px;
             margin-bottom: 15px;
@@ -82,7 +84,8 @@
             transition: border-color 0.3s;
         }
 
-        input:focus, select:focus {
+        input:focus,
+        select:focus {
             border-color: #007bff;
             outline: none;
         }
@@ -139,79 +142,68 @@
             }
         }
     </style>
-    <!-- Add Firebase SDK -->
     <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
-        import { getDatabase, ref, push, set, onValue, update, remove } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-database.js";
+        // Import the Firebase SDK
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
+        import { getFirestore, collection, addDoc, getDocs, updateDoc, deleteDoc, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js";
 
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyAADq3tI5EzMWP8eB69MgyYbcsW_Akcqc4",
-            authDomain: "chishela-4d6fa.firebaseapp.com",
-            databaseURL: "https://chishela-4d6fa-default-rtdb.firebaseio.com/",
-            projectId: "chishela-4d6fa",
-            storageBucket: "chishela-4d6fa.firebasestorage.app",
-            messagingSenderId: "717715004324",
-            appId: "1:717715004324:web:ff821ff48227c4e1d97f31",
-            measurementId: "G-6513W7DMJ0"
+            apiKey: "AIzaSyB2av1im8_wJNOin20npWlnGEBnG89MVU0",
+            authDomain: "stranger-6b6cf.firebaseapp.com",
+            projectId: "stranger-6b6cf",
+            storageBucket: "stranger-6b6cf.firebasestorage.app",
+            messagingSenderId: "833066708868",
+            appId: "1:833066708868:web:bf097bcee3141df4fe77d1",
         };
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
-        const db = getDatabase(app);
+        const db = getFirestore(app);
 
-        // Get elements from the DOM
         document.addEventListener('DOMContentLoaded', (event) => {
             const formContainer = document.getElementById('formContainer');
             const taskForm = document.getElementById('taskForm');
             const taskTableBody = document.getElementById('taskTableBody');
             const filterButtons = document.querySelectorAll('.filter-buttons button');
-
             let tasks = [];
 
-            // Load tasks from Firebase
+            // Load tasks from Firestore
             function loadTasks() {
-                const tasksRef = ref(db, 'tasks/');
-                onValue(tasksRef, (snapshot) => {
-                    const data = snapshot.val();
-                    tasks = data ? Object.entries(data) : [];
+                const tasksRef = collection(db, 'tasks');
+                onSnapshot(tasksRef, (snapshot) => {
+                    tasks = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
                     updateTable(tasks);
                 });
             }
 
-            // Save task to Firebase
-            function saveTask(task) {
-                const tasksRef = ref(db, 'tasks/');
-                const newTaskRef = push(tasksRef);
-                set(newTaskRef, task).then(() => {
-                    console.log("Task saved to Firebase:", task);
-                    loadTasks(); // Reload tasks after saving
-                }).catch((error) => {
-                    console.error("Error saving task to Firebase:", error);
-                });
+            // Save task to Firestore
+            async function saveTask(task) {
+                try {
+                    await addDoc(collection(db, 'tasks'), task);
+                } catch (error) {
+                    console.error("Error saving task to Firestore:", error);
+                }
             }
 
-            // Update task in Firebase
-            function updateTask(task, taskId) {
-                const taskRef = ref(db, `tasks/${taskId}`);
-                update(taskRef, task).then(() => {
-                    console.log("Task updated in Firebase:", task);
-                    loadTasks(); // Reload tasks after updating
-                }).catch((error) => {
-                    console.error("Error updating task in Firebase:", error);
-                });
+            // Update task in Firestore
+            async function updateTask(taskId, updatedTask) {
+                try {
+                    const taskRef = doc(db, 'tasks', taskId);
+                    await updateDoc(taskRef, updatedTask);
+                } catch (error) {
+                    console.error("Error updating task in Firestore:", error);
+                }
             }
 
-            // Remove task from Firebase
-            function deleteTask(taskId) {
-                const taskRef = ref(db, `tasks/${taskId}`);
-                remove(taskRef).then(() => {
-                    console.log("Task removed from Firebase:", taskId);
-                    loadTasks(); // Reload tasks after removing
-                }).catch((error) => {
-                    console.error("Error removing task from Firebase:", error);
-                });
+            // Delete task from Firestore
+            async function deleteTask(taskId) {
+                try {
+                    const taskRef = doc(db, 'tasks', taskId);
+                    await deleteDoc(taskRef);
+                } catch (error) {
+                    console.error("Error deleting task from Firestore:", error);
+                }
             }
 
             // Toggle the form visibility
@@ -221,13 +213,11 @@
                 } else {
                     formContainer.style.display = 'none';
                 }
-                console.log(`Form display toggled to: ${formContainer.style.display}`);
             }
 
             // Handle form submission
-            function addTask(event) {
+            async function addTask(event) {
                 event.preventDefault();
-
                 const taskDescription = document.getElementById('taskDescription').value;
                 const taskPriority = document.getElementById('taskPriority').value;
 
@@ -239,7 +229,7 @@
                         status: 'active'
                     };
 
-                    saveTask(task);
+                    await saveTask(task);
                     taskForm.reset();
                     formContainer.style.display = 'none';
                 } else {
@@ -248,26 +238,24 @@
             }
 
             // Mark task as completed
-            function markAsCompleted(taskId, row) {
-                row.classList.add('completed');
-                const updatedTask = {
-                    ...tasks.find(task => task[0] === taskId)[1],
-                    status: 'completed'
-                };
-                updateTask(updatedTask, taskId);
+            async function markAsCompleted(taskId) {
+                const task = tasks.find(task => task.id === taskId);
+                if (task) {
+                    task.status = 'completed';
+                    await updateTask(taskId, task);
+                }
             }
 
             // Delete task
-            function deleteTaskRow(taskId, row) {
-                deleteTask(taskId);
-                row.remove();
+            async function deleteTaskRow(taskId) {
+                await deleteTask(taskId);
             }
 
             // Update the table with tasks
             function updateTable(tasks) {
                 taskTableBody.innerHTML = ''; // Clear the table
 
-                tasks.forEach(([taskId, task]) => {
+                tasks.forEach(task => {
                     const row = taskTableBody.insertRow();
                     row.insertCell(0).innerText = task.description;
                     row.insertCell(1).innerText = task.priority;
@@ -280,21 +268,21 @@
                     } else {
                         const completeButton = document.createElement('button');
                         completeButton.innerText = 'Mark as Completed';
-                        completeButton.onclick = () => markAsCompleted(taskId, row);
+                        completeButton.onclick = () => markAsCompleted(task.id);
                         actionCell.appendChild(completeButton);
                     }
 
                     const deleteButton = document.createElement('button');
                     deleteButton.innerText = 'Delete';
                     deleteButton.style.marginLeft = '10px';
-                    deleteButton.onclick = () => deleteTaskRow(taskId, row);
+                    deleteButton.onclick = () => deleteTaskRow(task.id);
                     actionCell.appendChild(deleteButton);
                 });
             }
 
             // Filter tasks
             function filterTasks(status) {
-                const filteredTasks = tasks.filter(([taskId, task]) => status === 'all' || task.status === status);
+                const filteredTasks = tasks.filter(task => status === 'all' || task.status === status);
                 updateTable(filteredTasks);
             }
 
@@ -309,7 +297,7 @@
                 });
             });
 
-            // Initial load of tasks from Firebase
+            // Initial load of tasks from Firestore
             loadTasks();
         });
     </script>
