--- a/Tasksheet.html
+++ b/Tasksheet.html
@@ -109,6 +109,50 @@
             cursor: pointer;
         }
 
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #4CAF50;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content button {
+            color: white;
+            padding: 12px 16px;
+            text-align: left;
+            background-color: #4CAF50;
+            border: none;
+            width: 100%;
+            cursor: pointer;
+        }
+
+        .dropdown-content button:hover {
+            background-color: #45a049;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .dropdown button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .dropdown button:hover {
+            background-color: #090b09;
+        }
+
         input[type="text"], select {
             padding: 10px;
             width: 100%;
@@ -194,36 +238,62 @@
                 onSnapshot(tasksRef, (snapshot) => {
                     tasks = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
                     updateTable(tasks);
+                    saveToLocalStorage(tasks); // Save to local storage
                 });
             }
 
-            // Save task to Firestore
+            // Save tasks to Firestore
             async function saveTask(task) {
                 try {
-                    await addDoc(collection(db, 'tasks'), task);
+                    const docRef = await addDoc(collection(db, 'tasks'), task);
+                    task.id = docRef.id; // Update task with generated Firestore ID
+                    saveToLocalStorage(tasks); // Save to local storage
                 } catch (error) {
                     console.error("Error saving task to Firestore:", error);
                 }
             }
 
-            // Update task in Firestore
+            // Update tasks in Firestore
             async function updateTask(taskId, updatedTask) {
                 try {
                     const taskRef = doc(db, 'tasks', taskId);
                     await updateDoc(taskRef, updatedTask);
+                    saveToLocalStorage(tasks); // Save to local storage
                 } catch (error) {
                     console.error("Error updating task in Firestore:", error);
                 }
             }
 
-            // Delete task from Firestore
+            // Delete tasks from Firestore
             async function deleteTask(taskId) {
                 try {
                     const taskRef = doc(db, 'tasks', taskId);
                     await deleteDoc(taskRef);
+                    saveToLocalStorage(tasks); // Save to local storage
                 } catch (error) {
                     console.error("Error deleting task from Firestore:", error);
                 }
+            }
+
+            // Save tasks to local storage
+            function saveToLocalStorage(tasks) {
+                localStorage.setItem('tasks', JSON.stringify(tasks));
+            }
+
+            // Load tasks from local storage
+            function loadFromLocalStorage() {
+                const data = localStorage.getItem('tasks');
+                return data ? JSON.parse(data) : [];
+            }
+
+            // Load tasks from Firestore and local storage
+            function loadAllTasks() {
+                // Load from local storage first
+                tasks = loadFromLocalStorage();
+                updateTable(tasks);
+
+                // Load from Firestore
+                loadTasks();
             }
 
             // Toggle the form visibility
@@ -402,8 +472,8 @@
                 };
             }
 
-            // Load tasks from Firestore
-            loadTasks();
+            // Load tasks from Firestore and local storage
+            loadAllTasks();
             populateFilterDropdown();
 
             // Event listeners for adding tasks and closing the modal
